@@ -1,3 +1,13 @@
+flexc++ (1.06.00)
+
+  * Added images to the constructed manual 
+
+  * Removed the --namespace option. Namespaces now only available as
+    directive. 
+
+
+
+
 flexc++ (1.05.00)
 
   * Removed the possibility to specify path names for the --baseclass-header,
